# GameOfLife_wgpu

./: Cargo.toml
src/: app_context.rs  camera.rs  graphics_context.rs  main.rs
src/graphics_context/: surface_data.rs
src/shaders/: vs_fs.wgsl
