[package]
name = "game_of_life_wgpu"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = "0.30.12"
wgpu = { version = "26.0.1", features = ["glsl"] }
anyhow = "1.0.98"
env_logger = "0.11.8"
log = "0.4.27"
futures = "0.3.31"
bytemuck = "1.23.1"
nalgebra = { version = "0.34.0", features = ["bytemuck"] }
float-cmp = "0.10.0"
